Fixes color contrast issue

--- a/assets/scss/components/_rvtd-steps.scss
+++ b/assets/scss/components/_rvtd-steps.scss
@@ -30,7 +30,7 @@
     }
 
     &__label {
-        color: $color-black--600;
+        color: $color-black--700;
         margin-top: $sm;
         display: inline-block;
         font-size: $ts-14;
